--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   percent_indicator: ^4.2.2
   flutter_html: ^3.0.0-beta.2
   url_launcher: ^6.1.12
+  dotted_border:
 
 dev_dependencies:
   flutter_test:
